--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unofficial-linkedin-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Unofficial linkedin api for Node. Use at your own risk. ",
   "main": "src/index.js",
   "directories": {
@@ -17,7 +17,8 @@
     "linkedin",
     "api",
     "client",
-    "unofficial"
+    "unofficial",
+    "async/await"
   ],
   "author": "kyle.c.r.fahey@gmail.com",
   "license": "AGPL-3.0",
